Added programs to analyze