@@ -13,22 +13,8 @@
 
 package berkeley.com.sleepycat.je.rep.vlsn;
 
-import static berkeley.com.sleepycat.je.utilint.VLSN.NULL_VLSN;
-
-import java.util.ArrayList;
-import java.util.NoSuchElementException;
-import java.util.SortedMap;
-import java.util.TreeMap;
-
 import berkeley.com.sleepycat.bind.tuple.LongBinding;
-import berkeley.com.sleepycat.je.Cursor;
-import berkeley.com.sleepycat.je.CursorConfig;
-import berkeley.com.sleepycat.je.DatabaseEntry;
-import berkeley.com.sleepycat.je.DatabaseException;
-import berkeley.com.sleepycat.je.DbInternal;
-import berkeley.com.sleepycat.je.EnvironmentFailureException;
-import berkeley.com.sleepycat.je.LockMode;
-import berkeley.com.sleepycat.je.OperationStatus;
+import berkeley.com.sleepycat.je.*;
 import berkeley.com.sleepycat.je.dbi.DatabaseImpl;
 import berkeley.com.sleepycat.je.dbi.EnvironmentImpl;
 import berkeley.com.sleepycat.je.rep.vlsn.VLSNRange.VLSNRangeBinding;
@@ -40,10 +26,17 @@ import berkeley.com.sleepycat.je.utilint.LongStat;
 import berkeley.com.sleepycat.je.utilint.StatGroup;
 import berkeley.com.sleepycat.je.utilint.VLSN;
 
+import java.util.ArrayList;
+import java.util.NoSuchElementException;
+import java.util.SortedMap;
+import java.util.TreeMap;
+
+import static berkeley.com.sleepycat.je.utilint.VLSN.NULL_VLSN;
+
 /**
  * See @link{VLSNIndex} for an overview of the mapping system. The VLSNTracker
  * packages the VLSNRange and the cached, in-memory VLSNBuckets.
- *
+ * <p>
  * The tracker has a notion of the "currentBucket", which is the one receiving
  * updates. All other cached buckets are finished and are awaiting a write to
  * the database. Those finished buckets will only be updated in special
@@ -52,19 +45,14 @@ import berkeley.com.sleepycat.je.utilint.VLSN;
  */
 class VLSNTracker {
     private final EnvironmentImpl envImpl;
-
-    /* The first mapping that is is the tracker cache.  */
-    private VLSN firstTrackedVLSN = NULL_VLSN;
-
-    /* The last VLSN that is stored on disk. */
-    private VLSN lastOnDiskVLSN = NULL_VLSN;
-
     /*
-     * A cache of buckets that are not on disk. The map key is the bucket's
-     * first VLSN.
+     * In the future, we may want to vary stride, maxMappings and maxDistance
+     * dynamically, in reaction to efficient the mappings look.
      */
-    SortedMap<Long, VLSNBucket> bucketCache;
-
+    private final int stride;
+    private final int maxMappings;
+    private final int maxDistance;
+    private final LongStat nBucketsCreated;
     /*
      * The range should always be updated through assignment to a new
      * VLSNRange, to ensure that the values stay consistent. The current bucket
@@ -74,17 +62,16 @@ class VLSNTracker {
      * instance, so that there's no danger of getting inconsistent values.
      */
     protected volatile VLSNRange range;
-    private boolean rangeTruncated;
-
     /*
-     * In the future, we may want to vary stride, maxMappings and maxDistance
-     * dynamically, in reaction to efficient the mappings look.
+     * A cache of buckets that are not on disk. The map key is the bucket's
+     * first VLSN.
      */
-    private final int stride;
-    private final int maxMappings;
-    private final int maxDistance;
-
-    private final LongStat nBucketsCreated;
+    SortedMap<Long, VLSNBucket> bucketCache;
+    /* The first mapping that is is the tracker cache.  */
+    private VLSN firstTrackedVLSN = NULL_VLSN;
+    /* The last VLSN that is stored on disk. */
+    private VLSN lastOnDiskVLSN = NULL_VLSN;
+    private boolean rangeTruncated;
 
     /*
      * Create an VLSNTracker, with the range initialized from the mapping db.
@@ -95,14 +82,14 @@ class VLSNTracker {
                 int maxMappings,
                 int maxDistance,
                 StatGroup statistics)
-        throws DatabaseException {
+            throws DatabaseException {
 
         this.stride = stride;
         this.maxMappings = maxMappings;
         this.maxDistance = maxDistance;
         this.envImpl = envImpl;
         nBucketsCreated =
-            new LongStat(statistics, VLSNIndexStatDefinition.N_BUCKETS_CREATED);
+                new LongStat(statistics, VLSNIndexStatDefinition.N_BUCKETS_CREATED);
 
         bucketCache = new TreeMap<Long, VLSNBucket>();
 
@@ -116,30 +103,32 @@ class VLSNTracker {
         try {
             locker = BasicLocker.createBasicLocker(envImpl);
             cursor = DbInternal.makeCursor(mappingDbImpl,
-                                           locker,
-                                           CursorConfig.DEFAULT);
+                    locker,
+                    CursorConfig.DEFAULT);
             DbInternal.getCursorImpl(cursor).setAllowEviction(false);
 
             OperationStatus status = cursor.getSearchKey(key, data,
-                                                         LockMode.DEFAULT);
-            if (status == OperationStatus.SUCCESS) {
+                    LockMode.DEFAULT);
+            if(status == OperationStatus.SUCCESS) {
                 /* initialize the range from the database. */
                 VLSNRangeBinding rangeBinding = new VLSNRangeBinding();
                 range = rangeBinding.entryToObject(data);
                 lastOnDiskVLSN = range.getLast();
-            } else if (status == OperationStatus.NOTFOUND) {
+            }
+            else if(status == OperationStatus.NOTFOUND) {
                 /* No mappings exist before. */
                 range = VLSNRange.EMPTY;
-            } else {
+            }
+            else {
                 throw EnvironmentFailureException.unexpectedState
-                    ("VLSNTracker init: status=" + status);
+                        ("VLSNTracker init: status=" + status);
             }
         } finally {
-            if (cursor != null) {
+            if(cursor != null) {
                 cursor.close();
             }
 
-            if (locker != null) {
+            if(locker != null) {
                 locker.operationEnd(true);
             }
         }
@@ -160,13 +149,33 @@ class VLSNTracker {
 
         /* Set up a temporary stat group for use during recovery */
         StatGroup statistics =
-            new StatGroup(VLSNIndexStatDefinition.GROUP_NAME,
-                          VLSNIndexStatDefinition.GROUP_DESC);
+                new StatGroup(VLSNIndexStatDefinition.GROUP_NAME,
+                        VLSNIndexStatDefinition.GROUP_DESC);
         nBucketsCreated =
-            new LongStat(statistics,
-                         VLSNIndexStatDefinition.N_BUCKETS_CREATED);
+                new LongStat(statistics,
+                        VLSNIndexStatDefinition.N_BUCKETS_CREATED);
 
         initEmpty();
+    }
+
+    /*
+     * Used to check bucket boundaries for both the in-memory flush list and
+     * the on-disk database buckets. Buckets may not be adjacent, but must be
+     * in order.
+     */
+    static boolean verifyBucketBoundaries(ArrayList<VLSN> firstVLSN,
+                                          ArrayList<VLSN> lastVLSN) {
+        for(int i = 1; i < firstVLSN.size(); i++) {
+            VLSN first = firstVLSN.get(i);
+            VLSN prevLast = lastVLSN.get(i - 1);
+            if(first.compareTo(prevLast.getNext()) < 0) {
+                System.out.println("Boundary problem: bucket " + i +
+                        " first " + first +
+                        " follows bucket.last " + prevLast);
+                return false;
+            }
+        }
+        return true;
     }
 
     void initEmpty() {
@@ -180,7 +189,7 @@ class VLSNTracker {
      */
     synchronized VLSNBucket getGTEBucket(VLSN vlsn) {
 
-        if (lastOnDiskVLSN.compareTo(vlsn) >= 0) {
+        if(lastOnDiskVLSN.compareTo(vlsn) >= 0) {
             /* The bucket is in the database, not the cache. */
             return null;
         }
@@ -188,9 +197,9 @@ class VLSNTracker {
         Long pivot = vlsn.getSequence() + 1;
         SortedMap<Long, VLSNBucket> head = bucketCache.headMap(pivot);
         VLSNBucket prevBucket = null;
-        if (head.size() > 0) {
+        if(head.size() > 0) {
             prevBucket = head.get(head.lastKey());
-            if (prevBucket.owns(vlsn)) {
+            if(prevBucket.owns(vlsn)) {
                 return prevBucket;
             }
         }
@@ -200,16 +209,16 @@ class VLSNTracker {
          * with mappings that follow on.
          */
         SortedMap<Long, VLSNBucket> tail = bucketCache.tailMap(pivot);
-        if (tail.size() > 0) {
+        if(tail.size() > 0) {
             VLSNBucket bucket = tail.get(tail.firstKey());
             assert (bucket.owns(vlsn) || bucket.follows(vlsn)) :
-               "VLSN " + vlsn + " got wrong bucket " + bucket;
+                    "VLSN " + vlsn + " got wrong bucket " + bucket;
             return bucket;
         }
 
         throw EnvironmentFailureException.unexpectedState
-            (envImpl, "VLSN " + vlsn + " should be held within this tracker. " +
-             this + " prevBucket=" + prevBucket);
+                (envImpl, "VLSN " + vlsn + " should be held within this tracker. " +
+                        this + " prevBucket=" + prevBucket);
     }
 
     /**
@@ -220,14 +229,14 @@ class VLSNTracker {
      */
     synchronized VLSNBucket getLTEBucket(VLSN vlsn) {
 
-        if (firstTrackedVLSN.equals(NULL_VLSN) ||
-            (firstTrackedVLSN.compareTo(vlsn) > 0)) {
+        if(firstTrackedVLSN.equals(NULL_VLSN) ||
+                (firstTrackedVLSN.compareTo(vlsn) > 0)) {
             return null;
         }
 
         Long pivot = vlsn.getSequence() + 1;
         SortedMap<Long, VLSNBucket> head = bucketCache.headMap(pivot);
-        if (head.size() > 0) {
+        if(head.size() > 0) {
             return head.get(head.lastKey());
         }
 
@@ -237,12 +246,12 @@ class VLSNTracker {
          */
         SortedMap<Long, VLSNBucket> tail = bucketCache.tailMap(pivot);
         VLSNBucket nextBucket = null;
-        if (tail.size() > 0) {
+        if(tail.size() > 0) {
             nextBucket = tail.get(tail.firstKey());
         }
         throw EnvironmentFailureException.unexpectedState
-            (envImpl, "VLSN " + vlsn + " should be held within this tracker. " +
-             this + " nextBucket=" + nextBucket);
+                (envImpl, "VLSN " + vlsn + " should be held within this tracker. " +
+                        this + " nextBucket=" + nextBucket);
     }
 
     /**
@@ -254,7 +263,7 @@ class VLSNTracker {
 
         VLSNBucket currentBucket = null;
 
-        if (vlsn.compareTo(lastOnDiskVLSN) < 0) {
+        if(vlsn.compareTo(lastOnDiskVLSN) < 0) {
 
             /*
              * This VLSN is a laggard. It belongs to a bucket that has already
@@ -267,17 +276,18 @@ class VLSNTracker {
             return;
         }
 
-        if (bucketCache.size() == 0) {
+        if(bucketCache.size() == 0) {
             /* Nothing in the tracker, add a new bucket. */
             currentBucket = new VLSNBucket(DbLsn.getFileNumber(lsn), stride,
-                                           maxMappings, maxDistance, vlsn);
+                    maxMappings, maxDistance, vlsn);
             nBucketsCreated.increment();
 
             bucketCache.put(currentBucket.getFirst().getSequence(),
-                            currentBucket);
-        } else {
+                    currentBucket);
+        }
+        else {
             /* Find the last bucket. Only the last bucket is updateable. */
-            currentBucket =  bucketCache.get(bucketCache.lastKey());
+            currentBucket = bucketCache.get(bucketCache.lastKey());
         }
 
         /*
@@ -286,27 +296,27 @@ class VLSNTracker {
          * bucket, and since we only want to update the last bucket, we'll
          * throw this mapping away.
          */
-        if (currentBucket.follows(vlsn)) {
+        if(currentBucket.follows(vlsn)) {
             updateRange(vlsn, entryTypeNum);
             return;
         }
 
-        if (!currentBucket.put(vlsn, lsn)) {
+        if(!currentBucket.put(vlsn, lsn)) {
 
             /*
              * Couldn't put the mapping in this bucket. Close it and move to a
              * new one.
              */
             currentBucket =
-                new VLSNBucket(DbLsn.getFileNumber(lsn), stride,
-                               maxMappings, maxDistance, vlsn);
+                    new VLSNBucket(DbLsn.getFileNumber(lsn), stride,
+                            maxMappings, maxDistance, vlsn);
             nBucketsCreated.increment();
             bucketCache.put(currentBucket.getFirst().getSequence(),
-                            currentBucket);
-            if (!currentBucket.put(vlsn, lsn)) {
+                    currentBucket);
+            if(!currentBucket.put(vlsn, lsn)) {
                 throw EnvironmentFailureException.unexpectedState
-                    (envImpl, "Couldn't put VLSN " + vlsn + " into " +
-                     currentBucket);
+                        (envImpl, "Couldn't put VLSN " + vlsn + " into " +
+                                currentBucket);
             }
         }
 
@@ -317,7 +327,7 @@ class VLSNTracker {
          * in a bucket. Don't update it if it's an out-of-order, skipped
          * mapping.
          */
-        if (firstTrackedVLSN == NULL_VLSN) {
+        if(firstTrackedVLSN == NULL_VLSN) {
             firstTrackedVLSN = vlsn;
         }
     }
@@ -344,18 +354,18 @@ class VLSNTracker {
      */
     synchronized void flushToDatabase(DatabaseImpl mappingDbImpl, Txn txn) {
 
-	VLSNRange flushRange = range;
+        VLSNRange flushRange = range;
 
-        if (bucketCache.size() == 0) {
+        if(bucketCache.size() == 0) {
             /*
              * No mappings to write out, but it's possible that the range
              * changed due to a truncation, in which case we must update the
              * database. RangeTruncated is used to reduce the chance that
              * we are doing unnecessary writes of the range record to the db.
              */
-            if (rangeTruncated) {
+            if(rangeTruncated) {
                 lastOnDiskVLSN = flushRange.writeToDatabase(envImpl,
-                	                                    mappingDbImpl, txn);
+                        mappingDbImpl, txn);
                 rangeTruncated = false;
             }
             return;
@@ -383,21 +393,21 @@ class VLSNTracker {
          * by VLSNIndex.getGTEBucketFromDatabase.
          */
         VLSN currentLastVLSN = lastOnDiskVLSN;
-        for (Long key : bucketCache.keySet()) {
+        for(Long key : bucketCache.keySet()) {
 
             VLSNBucket target = bucketCache.get(key);
 
             /* Do some sanity checking before we write this bucket to disk. */
             validateBeforeWrite(target,
-                                flushRange,
-                                currentLastVLSN,
-                                target==lastBucket);
+                    flushRange,
+                    currentLastVLSN,
+                    target == lastBucket);
             target.writeToDatabase(envImpl, mappingDbImpl, txn);
             currentLastVLSN = target.getLast();
         }
 
         lastOnDiskVLSN = flushRange.writeToDatabase(envImpl,
-        	                                    mappingDbImpl, txn);
+                mappingDbImpl, txn);
         rangeTruncated = false;
 
         /*
@@ -430,26 +440,26 @@ class VLSNTracker {
                                      VLSN currentLastVLSN,
                                      boolean isLastBucket) {
 
-        if (!(currentLastVLSN.equals(NULL_VLSN)) &&
-            (target.getFirst().compareTo(currentLastVLSN) <= 0)) {
+        if(!(currentLastVLSN.equals(NULL_VLSN)) &&
+                (target.getFirst().compareTo(currentLastVLSN) <= 0)) {
             throw EnvironmentFailureException.unexpectedState
-                (envImpl, "target bucket overlaps previous bucket. " +
-                 "currentLastVLSN= " + currentLastVLSN + " target=" +
-                 target);
+                    (envImpl, "target bucket overlaps previous bucket. " +
+                            "currentLastVLSN= " + currentLastVLSN + " target=" +
+                            target);
         }
 
-        if (target.getLast().compareTo(flushRange.getLast()) > 0) {
+        if(target.getLast().compareTo(flushRange.getLast()) > 0) {
             throw EnvironmentFailureException.unexpectedState
-                (envImpl, "target bucket exceeds flush range. " +
-                 "range= " + flushRange + " target=" +
-                 target);
+                    (envImpl, "target bucket exceeds flush range. " +
+                            "range= " + flushRange + " target=" +
+                            target);
         }
 
-        if (isLastBucket) {
-            if (target.getLast().compareTo(flushRange.getLast()) != 0) {
-            throw EnvironmentFailureException.unexpectedState
-                (envImpl, "end of last bucket should match end of range. " +
-                 "range= " + flushRange + " target=" + target);
+        if(isLastBucket) {
+            if(target.getLast().compareTo(flushRange.getLast()) != 0) {
+                throw EnvironmentFailureException.unexpectedState
+                        (envImpl, "end of last bucket should match end of range. " +
+                                "range= " + flushRange + " target=" + target);
             }
         }
     }
@@ -490,15 +500,15 @@ class VLSNTracker {
          *         ghost bucket to hold the beginning of the range..
          * case 4: deleteEnd >= 12, we need to modify the bucket cache.
          */
-        if (!lastOnDiskVLSN.equals(VLSN.NULL_VLSN) &&
-            (lastOnDiskVLSN.compareTo(deleteEnd) >= 0)) {
+        if(!lastOnDiskVLSN.equals(VLSN.NULL_VLSN) &&
+                (lastOnDiskVLSN.compareTo(deleteEnd) >= 0)) {
 
             /*
              * case 1:  the buckets in the tracker cache are unaffected, all
              * the pertinent mappings are on disk.
              */
-            if (lastOnDiskVLSN.equals(deleteEnd)) {
-                if (firstTrackedVLSN.compareTo(afterDelete) > 0) {
+            if(lastOnDiskVLSN.equals(deleteEnd)) {
+                if(firstTrackedVLSN.compareTo(afterDelete) > 0) {
                     checkForGhostBucket(bucketCache, deleteFileNum);
                 }
                 lastOnDiskVLSN = NULL_VLSN;
@@ -506,15 +516,15 @@ class VLSNTracker {
             return;
         }
 
-        assert(!firstTrackedVLSN.equals(NULL_VLSN));
+        assert (!firstTrackedVLSN.equals(NULL_VLSN));
 
-        if (firstTrackedVLSN.equals(afterDelete)) {
+        if(firstTrackedVLSN.equals(afterDelete)) {
             /* case 2: The tracker is lined up perfectly with the new range. */
             lastOnDiskVLSN = NULL_VLSN;
             return;
         }
 
-        if (firstTrackedVLSN.compareTo(afterDelete) > 0) {
+        if(firstTrackedVLSN.compareTo(afterDelete) > 0) {
             /*
              * case 3: we have to make a ghost bucket.
              */
@@ -537,7 +547,7 @@ class VLSNTracker {
             tail = bucketCache.tailMap(retainBucketKey);
             checkForGhostBucket(tail, deleteFileNum);
             bucketCache = tail;
-        } catch (NoSuchElementException e) {
+        } catch(NoSuchElementException e) {
             firstTrackedVLSN = NULL_VLSN;
             bucketCache = new TreeMap<Long, VLSNBucket>();
         }
@@ -555,14 +565,14 @@ class VLSNTracker {
         VLSNBucket firstBucket = buckets.get(firstKey);
         VLSN firstRangeVLSN = range.getFirst();
         VLSN firstBucketVLSN = firstBucket.getFirst();
-        if (!firstBucketVLSN.equals(firstRangeVLSN)) {
+        if(!firstBucketVLSN.equals(firstRangeVLSN)) {
             long nextFile =
-                envImpl.getFileManager().getFollowingFileNum(deleteFileNum,
-                                                   true /* forward */);
+                    envImpl.getFileManager().getFollowingFileNum(deleteFileNum,
+                            true /* forward */);
             long lastPossibleLsn = firstBucket.getLsn(firstBucketVLSN);
             VLSNBucket placeholder = new GhostBucket(firstRangeVLSN,
-                                                     DbLsn.makeLsn(nextFile, 0),
-                                                     lastPossibleLsn);
+                    DbLsn.makeLsn(nextFile, 0),
+                    lastPossibleLsn);
             buckets.put(firstRangeVLSN.getSequence(), placeholder);
         }
     }
@@ -576,7 +586,7 @@ class VLSNTracker {
      * the lastSync can be changed to deleteStart.getPrev(), and lastTxnEnd is
      * unchanged.  The VLSNRange itself is updated before the tracker and
      * on-disk buckets are pruned.
-     *
+     * <p>
      * The VLSNIndex guarantees that the beginning and end vlsns in the range
      * have mappings so LTE and GTE search operations work. When truncating the
      * mappings in the tracker, check to see if the new end vlsn has a mapping,
@@ -584,13 +594,13 @@ class VLSNTracker {
      * a gap due to out of order mapping. For example, suppose mapping for vlsn
      * 20 came before the mappings for vlsn 17, 18 and 19. The buckets would
      * have this gap:
-     *     Bucket A: vlsns 10-16           
-     *     Bucket B: vlsns 20-25 
-     *     Bucket C: vlsns 26 - 30
+     * Bucket A: vlsns 10-16
+     * Bucket B: vlsns 20-25
+     * Bucket C: vlsns 26 - 30
      * If the new end of vlsn range is 11-14, 17, 18, 19, 21 - 24, or 27-29,
-     * we have to end the vlsn tracker with a new mapping of 
+     * we have to end the vlsn tracker with a new mapping of
      * (vlsn (deleteStart-1) ->  prevLsn) to cap off the buckets.
-     *
+     * <p>
      * Cases:
      * End of range is in the gap -- either 17, 18, 19
      * 1. on disk buckets exist, but don't encompass the gap: bucket A on disk
@@ -598,8 +608,8 @@ class VLSNTracker {
      * 3. on disk buckets encompass the gap: bucket A and B on disk.
      */
     synchronized void truncateFromTail(VLSN deleteStart, long prevLsn) {
-        
-        /* 
+
+        /*
          * Update the range first, it will define the range that the vlsnIndex
          * covers. Then adjust any mappings held in the bucket cache. Don't
          * update the lastOnDiskVLSN marker, which says what is on disk. Since
@@ -615,12 +625,12 @@ class VLSNTracker {
          */
         rangeTruncated = true;
 
-        if (firstTrackedVLSN.equals(NULL_VLSN)) {
+        if(firstTrackedVLSN.equals(NULL_VLSN)) {
             /* No mappings in this tracker */
             return;
         }
 
-        if (firstTrackedVLSN.compareTo(deleteStart) >= 0) {
+        if(firstTrackedVLSN.compareTo(deleteStart) >= 0) {
 
             /*
              * Everything in this tracker should be removed. In addition, the
@@ -642,16 +652,16 @@ class VLSNTracker {
 
         /* The newCache has buckets that should be preserved. */
         SortedMap<Long, VLSNBucket> newCache =
-            new TreeMap<Long, VLSNBucket>(bucketCache.headMap(targetKey));
+                new TreeMap<Long, VLSNBucket>(bucketCache.headMap(targetKey));
 
         /*
          * Prune any mappings >= deleteStart out of targetBucket. If it has any
          * mappings left, add it to newCache.
          */
         targetBucket.removeFromTail(deleteStart, prevLsn);
-        if (!targetBucket.empty()) {
+        if(!targetBucket.empty()) {
             newCache.put(targetBucket.getFirst().getSequence(),
-                         targetBucket);
+                    targetBucket);
         }
 
         bucketCache = newCache;
@@ -676,22 +686,23 @@ class VLSNTracker {
          * datastructure is as tidy as possible.
          */
         boolean needEndMapping = false;
-        if (bucketCache.isEmpty()) {
+        if(bucketCache.isEmpty()) {
             needEndMapping = true;
-        } else {
+        }
+        else {
             VLSNBucket lastBucket = bucketCache.get(bucketCache.lastKey());
-            needEndMapping = 
+            needEndMapping =
                     (lastBucket.getLast().compareTo(range.getLast()) < 0);
         }
 
-        if (needEndMapping) {
+        if(needEndMapping) {
             addEndMapping(range.getLast(), prevLsn);
         }
     }
 
     /**
      * Called by the VLSNIndex to see if we have to add a bucket in the tracker
-     * after pruning the on-disk storage. The get{LTE,GTE}Bucket methods 
+     * after pruning the on-disk storage. The get{LTE,GTE}Bucket methods
      * assume that there are mappings for the first and last VLSN in the range.
      * But since out of order vlsn mappings can cause non-contiguous buckets,
      * the pruning may have lost the end mapping. [#23491]
@@ -704,32 +715,32 @@ class VLSNTracker {
          * then we need to add a mapping for lastVLSN->lastLsn. Otherwise a
          * mapping already exists.
          */
-        if (lastOnDiskVLSN.compareTo(lastVLSN) < 0) {
+        if(lastOnDiskVLSN.compareTo(lastVLSN) < 0) {
 
-            /* 
-             * The on-disk vlsn mappings aren't sufficient to cover the 
+            /*
+             * The on-disk vlsn mappings aren't sufficient to cover the
              * lastVLSN. There needs to be a mapping in the tracker for the
              * end point of the range.
              */
-            if (!firstTrackedVLSN.equals(NULL_VLSN)) {
+            if(!firstTrackedVLSN.equals(NULL_VLSN)) {
 
-                /* 
+                /*
                  * There are mappings in the tracker, so we can assume
-                 * that they cover the end point, because truncateFromTail() 
+                 * that they cover the end point, because truncateFromTail()
                  * should have adjusted for that. But assert to be sure!
                  */
-                if (lastVLSN.compareTo(firstTrackedVLSN) < 0) { 
+                if(lastVLSN.compareTo(firstTrackedVLSN) < 0) {
                     throw EnvironmentFailureException.unexpectedState
-                        (envImpl,
-                         "Expected this tracker to cover vlsn " + lastVLSN +
-                         " after truncateFromTail. LastOnDiskVLSN= " +
-                         lastOnDiskVLSN + " tracker=" + this);
+                            (envImpl,
+                                    "Expected this tracker to cover vlsn " + lastVLSN +
+                                            " after truncateFromTail. LastOnDiskVLSN= " +
+                                            lastOnDiskVLSN + " tracker=" + this);
                 }
-                
+
                 return;
             }
 
-            /* 
+            /*
              * There are no mappings in the tracker. The on disk mappings were
              * pruned, and a gap was created between what was on disk and what
              * is in the tracker cache. Add a mapping.
@@ -744,16 +755,16 @@ class VLSNTracker {
     private void addEndMapping(VLSN lastVLSN, long lastLsn) {
         /* Assert that it's in the range */
         assert (lastVLSN.compareTo(range.getLast()) == 0) :
-            "lastVLSN=" + lastVLSN + " lastLsn = " + lastLsn + 
-            " range=" + range;
+                "lastVLSN=" + lastVLSN + " lastLsn = " + lastLsn +
+                        " range=" + range;
 
         VLSNBucket addBucket =
-            new VLSNBucket(DbLsn.getFileNumber(lastLsn), stride,
-                           maxMappings, maxDistance, lastVLSN);
+                new VLSNBucket(DbLsn.getFileNumber(lastLsn), stride,
+                        maxMappings, maxDistance, lastVLSN);
         addBucket.put(lastVLSN, lastLsn);
         nBucketsCreated.increment();
         bucketCache.put(addBucket.getFirst().getSequence(), addBucket);
-        if (firstTrackedVLSN.equals(NULL_VLSN)) {
+        if(firstTrackedVLSN.equals(NULL_VLSN)) {
             firstTrackedVLSN = lastVLSN;
         }
     }
@@ -765,13 +776,13 @@ class VLSNTracker {
      * the truncated vlsn bucket the same what that we can in
      * truncateFromTail. Because of that, we may need to remove mappings that
      * are < deleteStart.
-     *
+     * <p>
      * For example, suppose a bucket holds mappings
-     *   10 -> 101
-     *   15 -> 201
-     *   18 -> 301
+     * 10 -> 101
+     * 15 -> 201
+     * 18 -> 301
      * If deleteStart == 17, we will have to delete all the way to vlsn 15.
-     *
+     * <p>
      * The maintenance of VLSNRange.lastSync and lastTxnEnd are simplified
      * because of assumptions we can make because we are about to append
      * mappings found by the recovery tracker that begin at deleteStart. If
@@ -797,32 +808,33 @@ class VLSNTracker {
          * be fully contiguous -- we may have pruned away mappings that
          * would normally be in the database.
          */
-        if (bucketCache.size() == 0) {
+        if(bucketCache.size() == 0) {
             /* Just take all the recovery tracker's mappings */
             bucketCache = recoveryTracker.bucketCache;
-        } else {
+        }
+        else {
             VLSNBucket targetBucket = getGTEBucket(recoveryFirst);
             Long targetKey = targetBucket.getFirst().getSequence();
 
             /* The newCache holds buckets that should be preserved. */
             SortedMap<Long, VLSNBucket> newCache =
-                new TreeMap<Long, VLSNBucket>(bucketCache.headMap(targetKey));
+                    new TreeMap<Long, VLSNBucket>(bucketCache.headMap(targetKey));
 
             /*
              * Prune any mappings >= recoveryFirst out of targetBucket. If it
              * has any mappings left, add it to newCache.
              */
             targetBucket.removeFromTail(recoveryFirst, DbLsn.NULL_LSN);
-            if (!targetBucket.empty()) {
+            if(!targetBucket.empty()) {
                 newCache.put(targetBucket.getFirst().getSequence(),
-                             targetBucket);
+                        targetBucket);
             }
 
             newCache.putAll(recoveryTracker.bucketCache);
             bucketCache = newCache;
         }
 
-        if (bucketCache.size() > 0) {
+        if(bucketCache.size() > 0) {
             VLSNBucket firstBucket = bucketCache.get(bucketCache.firstKey());
             firstTrackedVLSN = firstBucket.getFirst();
         }
@@ -835,22 +847,22 @@ class VLSNTracker {
          * and the recovery tracker. Everything in this tracker should precede
          * the recovery tracker.
          */
-        if (!range.getLast().isNull()) {
-            if (range.getLast().compareTo
-                (recoveryTracker.getFirstTracked()) >= 0) {
+        if(!range.getLast().isNull()) {
+            if(range.getLast().compareTo
+                    (recoveryTracker.getFirstTracked()) >= 0) {
 
                 throw EnvironmentFailureException.unexpectedState
-                    (envImpl,
-                     "Expected this tracker to precede recovery tracker. " +
-                     "This tracker= " + this + " recoveryTracker = " +
-                     recoveryTracker);
+                        (envImpl,
+                                "Expected this tracker to precede recovery tracker. " +
+                                        "This tracker= " + this + " recoveryTracker = " +
+                                        recoveryTracker);
             }
         }
 
         bucketCache.putAll(recoveryTracker.bucketCache);
         VLSNRange currentRange = range;
         range = currentRange.getUpdate(recoveryTracker.getRange());
-        if (bucketCache.size() > 0) {
+        if(bucketCache.size() > 0) {
             VLSNBucket firstBucket = bucketCache.get(bucketCache.firstKey());
             firstTrackedVLSN = firstBucket.getFirst();
         }
@@ -867,7 +879,7 @@ class VLSNTracker {
         sb.append(" firstTracked=").append(firstTrackedVLSN);
         sb.append(" lastOnDiskVLSN=").append(lastOnDiskVLSN);
 
-        for (VLSNBucket bucket: bucketCache.values()) {
+        for(VLSNBucket bucket : bucketCache.values()) {
             sb.append("\n");
             sb.append(bucket);
         }
@@ -879,7 +891,7 @@ class VLSNTracker {
      */
     synchronized boolean verify(boolean verbose) {
 
-        if (!range.verify(verbose)) {
+        if(!range.verify(verbose)) {
             return false;
         }
 
@@ -887,55 +899,35 @@ class VLSNTracker {
         ArrayList<VLSN> firstVLSN = new ArrayList<VLSN>();
         ArrayList<VLSN> lastVLSN = new ArrayList<VLSN>();
 
-        for (VLSNBucket b : bucketCache.values()) {
+        for(VLSNBucket b : bucketCache.values()) {
             firstVLSN.add(b.getFirst());
             lastVLSN.add(b.getLast());
         }
 
-        if (!verifyBucketBoundaries(firstVLSN, lastVLSN)) {
+        if(!verifyBucketBoundaries(firstVLSN, lastVLSN)) {
             return false;
         }
 
-        if (firstVLSN.size() > 0) {
-            if (!firstVLSN.get(0).equals(firstTrackedVLSN)) {
-                if (verbose) {
+        if(firstVLSN.size() > 0) {
+            if(!firstVLSN.get(0).equals(firstTrackedVLSN)) {
+                if(verbose) {
                     System.err.println("firstBucketVLSN = " +
-                                       firstVLSN.get(0) + " should equal " +
-                                       firstTrackedVLSN);
+                            firstVLSN.get(0) + " should equal " +
+                            firstTrackedVLSN);
                 }
                 return false;
             }
 
-            VLSN lastBucketVLSN = lastVLSN.get(lastVLSN.size() -1);
-            if (!lastBucketVLSN.equals(range.getLast())) {
-                if (verbose) {
+            VLSN lastBucketVLSN = lastVLSN.get(lastVLSN.size() - 1);
+            if(!lastBucketVLSN.equals(range.getLast())) {
+                if(verbose) {
                     System.err.println("lastBucketVLSN = " + lastBucketVLSN +
-                                       " should equal " + range.getLast());
+                            " should equal " + range.getLast());
                 }
                 return false;
             }
         }
 
-        return true;
-    }
-
-    /*
-     * Used to check bucket boundaries for both the in-memory flush list and
-     * the on-disk database buckets. Buckets may not be adjacent, but must be
-     * in order.
-     */
-    static boolean verifyBucketBoundaries(ArrayList<VLSN> firstVLSN,
-                                          ArrayList<VLSN> lastVLSN) {
-        for (int i = 1; i < firstVLSN.size(); i++) {
-            VLSN first = firstVLSN.get(i);
-            VLSN prevLast = lastVLSN.get(i-1);
-            if (first.compareTo(prevLast.getNext()) < 0) {
-                System.out.println("Boundary problem: bucket " + i +
-                                   " first " + first +
-                                   " follows bucket.last " + prevLast);
-                return false;
-            }
-        }
         return true;
     }
 
